--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -756,8 +756,13 @@ FLEXI_FIELD_TAG_OPEN="Opening tag"
 FLEXI_FIELD_TAG_OPEN_DESC="If you have choosen 'custom tag' in the above dropdown, please enter here the opening tag."
 FLEXI_FIELD_URL="Url"
 FLEXI_FIELD_URLTITLE="Title"
-FLEXI_FIELD_USE_HTML_DESC="Use an HTML editor for this textarea"
-FLEXI_FIELD_USE_HTML="Use HTML"
+FLEXI_FIELD_TEXTAREA_EDITOR_MODE_DESC="Use an HTML (WYSIWYG) editor or display a simple textarea"
+FLEXI_FIELD_TEXTAREA_EDITOR_MODE="Editor"
+FLEXI_FIELD_TEXTAREA_INPUT_VALIDATION_DESC="Allow safe HTML tags to be entered, or only allow plain text, or use Joomla's default text filters (set per user group in Joomla global configuration)"
+FLEXI_FIELD_TEXTAREA_INPUT_VALIDATION="Validation"
+FLEXI_FIELD_TEXTAREA_TEXT_FILTERS="Usergroup Text Filters"
+FLEXI_FIELD_TEXTAREA_SAFE_HTML="Safe HTML"
+FLEXI_FIELD_TEXTAREA_PLAIN_TEXT="Plain Text"
 FLEXI_FIELD_USE_TITLE_DESC="Use the title of the link instead instead of the link itself. (Usefull to display a long link)"
 FLEXI_FIELD_USE_TITLE="Use title"
 FLEXI_LINE_BREAK="Line break"
