^ Completed work on text, textarea, termlist, for multi-value ability, for grouping, for new custom server side validation and XSS safety

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -758,11 +758,24 @@ FLEXI_FIELD_URL="Url"
 FLEXI_FIELD_URLTITLE="Title"
 FLEXI_FIELD_TEXTAREA_EDITOR_MODE_DESC="Use an HTML (WYSIWYG) editor or display a simple textarea"
 FLEXI_FIELD_TEXTAREA_EDITOR_MODE="Editor"
-FLEXI_FIELD_TEXTAREA_INPUT_VALIDATION_DESC="Allow safe HTML tags to be entered, or only allow plain text, or use Joomla's default text filters (set per user group in Joomla global configuration)"
-FLEXI_FIELD_TEXTAREA_INPUT_VALIDATION="Validation"
-FLEXI_FIELD_TEXTAREA_TEXT_FILTERS="Usergroup Text Filters"
-FLEXI_FIELD_TEXTAREA_SAFE_HTML="Safe HTML"
-FLEXI_FIELD_TEXTAREA_PLAIN_TEXT="Plain Text"
+FLEXI_FIELD_TEXTAREA_INPUT_VALIDATION_DESC="Allow input to be safe HTML tags, OR plain text, OR use Joomla's Text Filters (set per usergroup in Joomla global configuration), etc ..., never allow UNSAFE HTML for public forms, but if you do you should enable '<b>encode on display</b>' parameter"
+
+; server side validation
+FLEXI_FIELD_SERVER_SIDE_VALIDATION="Server-Side validation"
+FLEXI_FIELD_UGRP_TEXT_FILTERS="Joomla's Text Filters (per usergroup)"
+FLEXI_FIELD_SAFE_HTML="SAFE HTML : remove dangerous tags/attributes"
+FLEXI_FIELD_UNSAFE_HTML="UNSAFE HTML (raw HTML) : ... MAYBE: encode on display"
+FLEXI_FIELD_PLAIN_TEXT_DECODE_ENTITIES="TEXT : decode HTML entities, strip HTML tags"
+FLEXI_FIELD_PLAIN_TEXT_ALLOW_ENTITIES="TEXT or ENCODED HTML: allow entities, strip tags"
+
+; encode/clean output
+FLEXI_ENCODE_OUTPUT="Encode values <br/><small> (XSS safe, visible HTML/JS) </small>"
+FLEXI_ENCODE_OUTPUT_DESC="Encode any HTML/JS inside the values this makes any HTML/JS code to become visible, thus values become XSS safe (cross site scripting). <br/> <br/> NOTE: enable this, <br/> - if you suspect that XSS unsafe values may have been added to the field by older field configurations, <br/> - or if you are want to display HTML code that is not already encoded as HTML entities"
+FLEXI_CLEAN_OUTPUT="Clean values <br/><small> (e.g. strip HTML / JS) </small>"
+FLEXI_CLEAN_OUTPUT_DESC="You can take an extra step to clean any unsafe or undesired HTML inside the values, <br/> <br/> NOTE: enable this,  <br/> - if you suspect that XSS unsafe HTML, or undesired HTML formating may have been added to the field by older field configurations"
+FLEXI_UNSAFE_HTML="Unsafe HTML"
+FLEXI_ALL_HTML="ALL HTML"
+
 FLEXI_FIELD_USE_TITLE_DESC="Use the title of the link instead instead of the link itself. (Usefull to display a long link)"
 FLEXI_FIELD_USE_TITLE="Use title"
 FLEXI_LINE_BREAK="Line break"
@@ -2553,6 +2566,9 @@ FLEXI_VALUE_VALIDATION_MASK_CUSTOM_DESC="(Developers only) Please enter a custom
 
 FLEXI_NO_MASK="No Masking"
 FLEXI_CUSTOM_MASK_ENTER_BELOW="-CUSTOM- Mask (enter below)"
+
+FLEXI_FORM_FIELD_CONF="Form field"
+FLEXI_FORM_FIELD_CONF_DESC="Configuration of the form field such us maximum characters"
 
 ; some string for versioning and previewing versions and item translations
 FLEXI_FRONTEND_ACTIVE_VERSION="Current Version <br/><small>(Frontend Active)</small>"
